# integrator_on_triangle

./: CMakeLists.txt  LICENSE  README.md  galera.py  integrator_For verification purposes.py  integrator_na_Fraction.py
aktualno/: integrator_.py  vazhno.txt
include/integrator/: integrator.hpp
integrator/: Integrator.java
metod_analitis_summ_exp/: integrator_.py
numeric/: galerkin.py  galerkin2.py  galerkin_2.py  integrator_.py  integrator_opti.py  riman.py
src/: Galerkin.cpp
src/C++/: Galerkin.cpp  IntegratorC++.sln  IntegratorC++.vcxproj  IntegratorC++.vcxproj.filters  Riman.cpp
src/Integrator/: CMakeLists.txt  integrator.cpp
src/integrator/: Integrator.java
staroe/: integrator_.py
staroe/metod_analitis_summ_exp/: integrator_.py
